# python-coding-test

./: .flake8  .gitignore  .pylintrc  LICENSE  Makefile  README.md  check_code.sh  check_dev_server.sh  env_example  pyproject.toml
.github/workflows/: ci.yml
src/: auth.py  database_service.py  main.py  models.py  tests.py
